# IRP5-Shopping-Cart-GROUP2

./: README.md
image_capturing/: CMakeLists.txt  package.xml
image_capturing/launch/: capture_images.launch
image_capturing/src/: image_capturing_node.cpp  push_button_node.py
person_detector/: CMakeLists.txt  package.xml
person_detector/launch/: person_detector.launch
person_detector/src/: geometrytoackerman.py  person_detector_node.cpp
push_button_utils/launch/: push_button.launch
push_button_utils/push_button_utils/src/: push_button.py
push_button_utils/src/: push_button.py
